--- a/atividade_b.ipynb
+++ b/atividade_b.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 12,
    "metadata": {
     "tags": [
      "parameters"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -239,86 +239,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:[105, 117, 118, 122, 131, 135]\n",
-      "1:[105, 107, 109, 117, 118, 122, 131, 135]\n",
-      "2:[105, 107, 109, 117, 118, 122, 130, 131, 135]\n",
-      "3:[105, 107, 109, 117, 118, 122, 131, 135]\n",
-      "4:[105, 107, 109, 117, 118, 122, 131, 135]\n",
-      "5:[105, 117, 118, 122]\n",
-      "6:[105, 107, 109, 117, 118, 122, 130, 131, 135]\n",
-      "7:[105, 117, 118, 122, 131, 135]\n",
-      "8:[105, 107, 109, 117, 118, 122, 130, 131, 135]\n",
-      "9:[105, 109, 117, 118, 122, 131, 135]\n",
-      "10:[105, 117, 118, 122, 131]\n",
-      "11:[105, 117, 118, 122, 131, 135]\n",
-      "12:[105, 107, 109, 117, 118, 122, 130, 131, 135]\n",
-      "13:[100, 102, 105, 107, 109, 117, 118, 120, 122, 125, 129, 130, 131, 135, 143, 144]\n",
-      "14:[105, 117, 118, 122, 131, 135]\n",
-      "15:[105, 117, 118, 122]\n",
-      "16:[105, 117, 118, 122, 131, 135]\n",
-      "17:[105, 117, 118, 122, 131, 135]\n",
-      "18:[117, 118, 122]\n",
-      "19:[105, 117, 118, 122, 131, 135]\n",
-      "20:[105, 117, 118, 122]\n",
-      "21:[105, 117, 118, 122, 131]\n",
-      "22:[100, 102, 105, 107, 109, 117, 118, 122, 125, 130, 131, 135, 143]\n",
-      "23:[105, 117, 118, 122, 131]\n",
-      "24:[105, 117, 118, 122, 131]\n",
-      "25:[105, 117, 118, 122, 131]\n",
-      "26:[105, 117, 118, 122, 131]\n",
-      "27:[105, 117, 118, 122, 131]\n",
-      "28:[105, 117, 118, 122, 131, 135]\n",
-      "29:[105, 117, 118, 122, 131, 135]\n",
-      "30:[105, 117, 118, 122, 131, 135]\n",
-      "31:[105, 117, 118, 122, 131]\n",
-      "32:[105, 117, 118, 122, 131, 135]\n",
-      "33:[105, 117, 118, 122, 131, 135]\n",
-      "34:[105, 117, 118, 122, 131, 135]\n",
-      "35:[105, 107, 109, 117, 118, 122, 130, 131, 135]\n",
-      "36:[105, 117, 118, 122, 131, 135]\n",
-      "37:[105, 107, 109, 117, 118, 122, 130, 131, 135]\n",
-      "38:[105, 107, 109, 117, 118, 122, 125, 130, 131, 135]\n",
-      "39:[105, 117, 118, 122, 131, 135]\n",
-      "40:[105, 107, 109, 117, 118, 122, 131, 135]\n",
-      "41:[105, 107, 109, 117, 118, 122, 125, 130, 131, 135]\n",
-      "42:[105, 107, 109, 117, 118, 122, 125, 130, 131, 135]\n",
-      "43:[105, 117, 118, 122, 131]\n",
-      "44:[117, 118, 122]\n",
-      "45:[105, 107, 109, 117, 118, 122, 131, 135]\n",
-      "46:[105, 117, 118, 122, 131]\n",
-      "47:[105, 107, 109, 117, 118, 122, 130, 131, 135]\n",
-      "48:[105, 117, 118, 122, 131]\n",
-      "49:[105, 109, 117, 118, 122, 131, 135]\n",
-      "100:[]\n",
-      "102:[]\n",
-      "105:[]\n",
-      "107:[]\n",
-      "109:[]\n",
+      "8:[118]\n",
+      "13:[117, 118, 122]\n",
+      "22:[117, 118, 122]\n",
+      "38:[118]\n",
+      "41:[118]\n",
+      "42:[118]\n",
       "117:[]\n",
       "118:[]\n",
-      "120:[]\n",
-      "122:[]\n",
-      "125:[]\n",
-      "129:[]\n",
-      "130:[]\n",
-      "131:[]\n",
-      "135:[]\n",
-      "143:[]\n",
-      "144:[]\n"
+      "122:[]\n"
      ]
     }
    ],
    "source": [
     "# construnção do grafo utilizando o limiar l\n",
     "g = Grafo(direcionado=False)\n",
-    "l = 0.2\n",
+    "l = 0.05\n",
     "# se a distancia normalizada for menor que o limiar\n",
     "# cria uma aresta entre i e j\n",
     "for i in range(len(dist_norm)):\n",
@@ -333,38 +276,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'-x'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[172], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39m#dot.graph_attr[\"dim\"] = \"4\"\u001b[39;00m\n\u001b[1;32m      5\u001b[0m dot\u001b[39m.\u001b[39mgraph_attr[\u001b[39m\"\u001b[39m\u001b[39msize\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m1200px,900px\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m----> 6\u001b[0m dot\u001b[39m.\u001b[39;49mgraph_attr[\u001b[39m\"\u001b[39;49m\u001b[39m-x\u001b[39;49m\u001b[39m\"\u001b[39;49m]\n\u001b[1;32m      7\u001b[0m dot\u001b[39m.\u001b[39mformat \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mpng\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      8\u001b[0m dot\u001b[39m.\u001b[39mattr\n",
-      "\u001b[0;31mKeyError\u001b[0m: '-x'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 1\n",
+      "118 0\n",
+      "13 3\n",
+      "117 0\n",
+      "122 0\n",
+      "22 3\n",
+      "38 1\n",
+      "41 1\n",
+      "42 1\n"
      ]
+    },
+    {
+     "data": {
+      "image/svg+xml": [
+       "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n",
+       "<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG 1.1//EN\"\n",
+       " \"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\">\n",
+       "<!-- Generated by graphviz version 7.1.0 (0)\n",
+       " -->\n",
+       "<!-- Pages: 1 -->\n",
+       "<svg width=\"228pt\" height=\"268pt\"\n",
+       " viewBox=\"0.00 0.00 228.13 267.88\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
+       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 263.88)\">\n",
+       "<polygon fill=\"white\" stroke=\"none\" points=\"-4,4 -4,-263.88 224.13,-263.88 224.13,4 -4,4\"/>\n",
+       "<!-- 8 -->\n",
+       "<g id=\"node1\" class=\"node\">\n",
+       "<title>8</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"27\" cy=\"-105\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"27\" y=\"-101.3\" font-family=\"Times,serif\" font-size=\"14.00\">8</text>\n",
+       "</g>\n",
+       "<!-- 118 -->\n",
+       "<g id=\"node2\" class=\"node\">\n",
+       "<title>118</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"112.39\" cy=\"-95.96\" rx=\"28.7\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"112.39\" y=\"-92.26\" font-family=\"Times,serif\" font-size=\"14.00\">118</text>\n",
+       "</g>\n",
+       "<!-- 8&#45;&#45;118 -->\n",
+       "<g id=\"edge1\" class=\"edge\">\n",
+       "<title>8&#45;&#45;118</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M54.02,-102.14C63.5,-101.13 74.17,-100 83.78,-98.99\"/>\n",
+       "</g>\n",
+       "<!-- 13 -->\n",
+       "<g id=\"node3\" class=\"node\">\n",
+       "<title>13</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"108.89\" cy=\"-177.36\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"108.89\" y=\"-173.66\" font-family=\"Times,serif\" font-size=\"14.00\">13</text>\n",
+       "</g>\n",
+       "<!-- 13&#45;&#45;118 -->\n",
+       "<g id=\"edge3\" class=\"edge\">\n",
+       "<title>13&#45;&#45;118</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M109.68,-158.89C110.26,-145.57 111.03,-127.66 111.6,-114.36\"/>\n",
+       "</g>\n",
+       "<!-- 117 -->\n",
+       "<g id=\"node4\" class=\"node\">\n",
+       "<title>117</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"97.43\" cy=\"-241.88\" rx=\"28.7\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"97.43\" y=\"-238.18\" font-family=\"Times,serif\" font-size=\"14.00\">117</text>\n",
+       "</g>\n",
+       "<!-- 13&#45;&#45;117 -->\n",
+       "<g id=\"edge2\" class=\"edge\">\n",
+       "<title>13&#45;&#45;117</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M105.64,-195.68C104.08,-204.47 102.21,-214.97 100.65,-223.74\"/>\n",
+       "</g>\n",
+       "<!-- 122 -->\n",
+       "<g id=\"node5\" class=\"node\">\n",
+       "<title>122</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"188.99\" cy=\"-220.99\" rx=\"28.7\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"188.99\" y=\"-217.29\" font-family=\"Times,serif\" font-size=\"14.00\">122</text>\n",
+       "</g>\n",
+       "<!-- 13&#45;&#45;122 -->\n",
+       "<g id=\"edge4\" class=\"edge\">\n",
+       "<title>13&#45;&#45;122</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M129.94,-188.82C141.34,-195.04 155.42,-202.7 166.97,-209\"/>\n",
+       "</g>\n",
+       "<!-- 22 -->\n",
+       "<g id=\"node6\" class=\"node\">\n",
+       "<title>22</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"150.69\" cy=\"-167.85\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"150.69\" y=\"-164.15\" font-family=\"Times,serif\" font-size=\"14.00\">22</text>\n",
+       "</g>\n",
+       "<!-- 22&#45;&#45;118 -->\n",
+       "<g id=\"edge6\" class=\"edge\">\n",
+       "<title>22&#45;&#45;118</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M141.42,-150.45C135.44,-139.23 127.69,-124.69 121.71,-113.45\"/>\n",
+       "</g>\n",
+       "<!-- 22&#45;&#45;117 -->\n",
+       "<g id=\"edge5\" class=\"edge\">\n",
+       "<title>22&#45;&#45;117</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M138.87,-184.28C130.1,-196.47 118.2,-213.01 109.4,-225.24\"/>\n",
+       "</g>\n",
+       "<!-- 22&#45;&#45;122 -->\n",
+       "<g id=\"edge7\" class=\"edge\">\n",
+       "<title>22&#45;&#45;122</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M162.6,-184.38C167.16,-190.71 172.38,-197.95 176.96,-204.3\"/>\n",
+       "</g>\n",
+       "<!-- 38 -->\n",
+       "<g id=\"node7\" class=\"node\">\n",
+       "<title>38</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"57.51\" cy=\"-35.97\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"57.51\" y=\"-32.27\" font-family=\"Times,serif\" font-size=\"14.00\">38</text>\n",
+       "</g>\n",
+       "<!-- 38&#45;&#45;118 -->\n",
+       "<g id=\"edge8\" class=\"edge\">\n",
+       "<title>38&#45;&#45;118</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M71.65,-51.42C79.78,-60.31 89.96,-71.44 98.11,-80.35\"/>\n",
+       "</g>\n",
+       "<!-- 41 -->\n",
+       "<g id=\"node8\" class=\"node\">\n",
+       "<title>41</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"193.13\" cy=\"-66.93\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"193.13\" y=\"-63.23\" font-family=\"Times,serif\" font-size=\"14.00\">41</text>\n",
+       "</g>\n",
+       "<!-- 41&#45;&#45;118 -->\n",
+       "<g id=\"edge9\" class=\"edge\">\n",
+       "<title>41&#45;&#45;118</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M168.9,-75.64C159.06,-79.18 147.67,-83.27 137.72,-86.85\"/>\n",
+       "</g>\n",
+       "<!-- 42 -->\n",
+       "<g id=\"node9\" class=\"node\">\n",
+       "<title>42</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"135.32\" cy=\"-18\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"135.32\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">42</text>\n",
+       "</g>\n",
+       "<!-- 42&#45;&#45;118 -->\n",
+       "<g id=\"edge10\" class=\"edge\">\n",
+       "<title>42&#45;&#45;118</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M130,-36.08C126.3,-48.68 121.38,-65.4 117.68,-77.98\"/>\n",
+       "</g>\n",
+       "</g>\n",
+       "</svg>\n"
+      ],
+      "text/plain": [
+       "<graphviz.graphs.Graph at 0x7f1067c07460>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# plotagem do grafo\n",
-    "dot = graphviz.Graph(comment=\"Grafo\",engine=\"fdp\")\n",
+    "dot = graphviz.Graph(comment=\"Grafo\",engine=\"neato\")\n",
     "dot.graph_attr[\"Goverlap\"] = \"scale\"\n",
-    "#dot.graph_attr[\"dim\"] = \"4\"\n",
-    "dot.graph_attr[\"size\"] = \"1200px,900px\"\n",
-    "dot.graph_attr[\"\"]\n",
+    "dot.graph_attr[\"cluster\"] = \"true\"\n",
     "dot.format = \"png\"\n",
     "dot.attr\n",
     "\n",
     "# adciona os vertices\n",
     "for key in g.grafo:\n",
+    "    print(key, g.grau_vertice(key))\n",
     "    dot.node(str(key))\n",
     "\n",
     "# adciona as arestas\n",
     "for key in g.grafo:\n",
-    "    dot.node(str(key))\n",
     "    for node in g.grafo[key]:\n",
     "        dot.edge(str(key),str(node))\n",
     "\n",
